Updated CSS, changed file structure to be a bit more clean

--- a/TurbineDetail.html
+++ b/TurbineDetail.html
@@ -11,7 +11,7 @@
         <!-- Latest compiled and minified JavaScript -->
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
-		<link rel="stylesheet" href=".css">
+		<link rel="stylesheet" href="CSS/AGS.css">
 		<style>
       div1{
         border-width: medium;
@@ -32,7 +32,7 @@
 		<div class="container">
 			<header class="row">
 				<div class="col-xs-10">
-                <img src="" alt="" height = 90>
+                <img src="Images/turbine.jpeg" alt="" height = 90>
 				</div>
 				<button class="col-xs-2 btn btn-sm">Log in <span class="glyphicon glyphicon-log-in"></span></button>
 			</header>
