--- a/page1.html
+++ b/page1.html
@@ -11,7 +11,7 @@
         <!-- Latest compiled and minified JavaScript -->
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
-		<link rel="stylesheet" href="AGS.css">
+		<link rel="stylesheet" href="CSS/AGS.css">
 		<style>
 			table, th, td {
 				border: 1px solid black;
