--- a/page2.html
+++ b/page2.html
@@ -7,27 +7,27 @@
 
         <!-- jQuery CDN -->
         <script src="https://code.jquery.com/jquery-3.2.1.js"></script>
-        
+
         <!-- Latest compiled and minified JavaScript -->
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    
-		<link rel="stylesheet" href="AGS.css">
+
+		<link rel="stylesheet" href="CSS/AGS.css">
 		<style>
 			body, head{
 				background-color: #CEF6CE;
 			}
 		</style>
 	</head>
-	
+
 	<body>
 		<div class="container">
 			<header class="row">
 				<div class="col-xs-10">
-                <img src="" alt="" height = 90>
+                <img src="Images/turbine.jpeg" alt="" height = 90>
 				</div>
 				<button class="col-xs-1 btn btn-sm">Log in <span class="glyphicon glyphicon-log-in"></span></button>
 			</header>
-			
+
 			<nav class="row">
             <ul class="nav navbar-nav">
                 <li><a href="">Home</a></li>
@@ -44,28 +44,28 @@
                 </li>
             </ul>
 			</nav>
-			
+
 			<main class= "row">
 			<h1>Turbine Information</h1>
 				<p> We plan on having a page that willhave each turbine laid out with an indication of its status (good, sersors triggered, outage). The SM will be able to hover over each turbine and click for further details</p>
 				<div class="row">
-					<div id ="eachTurbine" class="col-sm-3";"><img src="turbine.jpeg" alt="Windmill" width="80" height="80"> </div>
-					<div id ="eachTurbine" class="col-sm-3";"><img src="turbine.jpeg" alt="Windmill" width="80" height="80"></div>
-					<div id ="eachTurbine" class="col-sm-3";"><img src="turbine.jpeg" alt="Windmill" width="80" height="80"></div>
-					<div id ="eachTurbine" class="col-sm-3";"><img src="turbine.jpeg" alt="Windmill" width="80" height="80"></div>
+					<div id ="eachTurbine" class="col-sm-3";"><img src="Images/turbine.jpeg" alt="Windmill" width="80" height="80"> </div>
+					<div id ="eachTurbine" class="col-sm-3";"><img src="Images/turbine.jpeg" alt="Windmill" width="80" height="80"></div>
+					<div id ="eachTurbine" class="col-sm-3";"><img src="Images/turbine.jpeg" alt="Windmill" width="80" height="80"></div>
+					<div id ="eachTurbine" class="col-sm-3";"><img src="Images/turbine.jpeg" alt="Windmill" width="80" height="80"></div>
 				</div>
 				<br>
 				<div class="row">
-					<div id ="eachTurbine" class="col-sm-3";"><img src="turbine.jpeg" alt="Windmill" width="80" height="80"> </div>
-					<div id ="eachTurbine" class="col-sm-3";"><img src="turbine.jpeg" alt="Windmill" width="80" height="80"></div>
-					<div id ="eachTurbine" class="col-sm-3";"><img src="turbine.jpeg" alt="Windmill" width="80" height="80"></div>
-					<div id ="eachTurbine" class="col-sm-3";"><img src="turbine.jpeg" alt="Windmill" width="80" height="80"></div>
+					<div id ="eachTurbine" class="col-sm-3";"><img src="Images/turbine.jpeg" alt="Windmill" width="80" height="80"> </div>
+					<div id ="eachTurbine" class="col-sm-3";"><img src="Images/turbine.jpeg" alt="Windmill" width="80" height="80"></div>
+					<div id ="eachTurbine" class="col-sm-3";"><img src="Images/turbine.jpeg" alt="Windmill" width="80" height="80"></div>
+					<div id ="eachTurbine" class="col-sm-3";"><img src="Images/turbine.jpeg" alt="Windmill" width="80" height="80"></div>
 				</div>
 			</main>
-			
+
 			<footer></footer>
 		</div>
 	</body>
 
-	
+
 </html>
