New Bootstrap columns for the turbine detail page

--- a/TurbineDetail.html
+++ b/TurbineDetail.html
@@ -13,18 +13,7 @@
 
 		<link rel="stylesheet" href="CSS/AGS.css">
 		<style>
-      div1{
-        border-width: medium;
-        border-color: black;
-        border-radius: 3px;
-        font-style:italic;
-      }
-      div2{
-        border-width: medium;
-        border-color: black;
-        border-radius: 3px;
-        font-style:italic;
-      }
+
 		</style>
 	</head>
 
@@ -56,42 +45,23 @@
 
 			<main class= "row">
 
-        <div class="container-fluid">
-    <div class="row">
-      <div1>
-
-        <div2 class="col-lg-3">
-            <h3>Turbine Uptime:</h3>
-            <br />
-            <br />
-            <h4>10 Days 14 Hours 3 Minutes</h4>
-        </div2>
-
-        <div class="col-lg-3">
-            <h3>Current Power Generation:</h3>
-            <br />
-            <br />
-            <h4>1000KW</h4>
-
-        </div>
-
-        <div class="col-lg-3">
-            <h3>Last Service Date</h3>
-            <br />
-            <br />
-            5/18/18
-        </div>
-
-        <div class="col-lg-3">
-            <h3>KPI #4</h3>
-            <br />
-            <br />
-            Sample Data Here
-        </div>
-
-    </div1>
+<div class="container">
+  <div class="row">
+    <div class="col-xs-3">
+      KPI Metric 1
+    </div>
+    <div class="col-xs-3">
+      KPI Metric 2
+    </div>
+    <div class="col-xs-3">
+      KPI Metric 3
+    </div>
+		<div class="col-xs-3">
+      KPI Metric 4
+    </div>
   </div>
 </div>
+<hr>
 			</main>
 
 			<footer></footer>
