--- a/TurbineDetail.html
+++ b/TurbineDetail.html
@@ -14,6 +14,14 @@
 		<link rel="stylesheet" href="CSS/AGS.css">
 		<style>
 
+.metric-container{
+	background-color: rgb(100, 100, 100);
+	;
+}
+.div1{
+	height: 200px;
+	width:75%;
+}
 		</style>
 	</head>
 
@@ -45,20 +53,20 @@
 
 			<main class= "row">
 
-<div class="container">
+<div class="metric-container">
   <div class="row">
-    <div class="col-xs-3">
+    <div1 class="col-xs-3">
       KPI Metric 1
-    </div>
-    <div class="col-xs-3">
+    </div1>
+    <div1 class="col-xs-3">
       KPI Metric 2
-    </div>
-    <div class="col-xs-3">
+    </div1>
+    <div1 class="col-xs-3">
       KPI Metric 3
-    </div>
-		<div class="col-xs-3">
+    </div1>
+		<div1 class="col-xs-3">
       KPI Metric 4
-    </div>
+    </div1>
   </div>
 </div>
 <hr>
