Added placeholders for timeseries data

--- a/TurbineDetail.html
+++ b/TurbineDetail.html
@@ -14,14 +14,17 @@
 		<link rel="stylesheet" href="CSS/AGS.css">
 		<style>
 
-.metric-container{
-	background-color: rgb(100, 100, 100);
-	;
-}
-.div1{
-	height: 200px;
-	width:75%;
-}
+		.metrics-container{
+			background-color: rgb(100, 100, 100);
+			height: 200px;
+			;
+		}
+		div1{
+			border: 5px Solid;
+			height: 200px;
+
+		}
+
 		</style>
 	</head>
 
@@ -53,10 +56,9 @@
 
 			<main class= "row">
 
-<div class="metric-container">
-  <div class="row">
+<div class="metrics-container">
     <div1 class="col-xs-3">
-      KPI Metric 1
+      <Strong>KPI Metric 1
     </div1>
     <div1 class="col-xs-3">
       KPI Metric 2
@@ -65,15 +67,28 @@
       KPI Metric 3
     </div1>
 		<div1 class="col-xs-3">
-      KPI Metric 4
+      KPI Metric 4</Strong>
     </div1>
   </div>
 </div>
 <hr>
+<h3> Plots of Time Series Data </h3>
+<div>
+	<img src="Images/Timeseries.png" class="img-responsive col-xs-6" alt="Sample Timeseries">
 			</main>
-
+	<img src="Images/Timeseries.png" class="img-responsive col-xs-6" alt="Sample Timeseries">
+</div>
+<br>
+<br>
+<hr>
+<h3> More Plots of Time Series Data </h3>
+<div>
+	<img src="Images/Timeseries.png" class="img-responsive col-xs-6" alt="Sample Timeseries">
+			</main>
+	<img src="Images/Timeseries.png" class="img-responsive col-xs-6" alt="Sample Timeseries">
+</div>
 			<footer></footer>
-		</div>
+
 	</body>
 
 
