--- a/page1.html
+++ b/page1.html
@@ -13,18 +13,20 @@
 
 		<link rel="stylesheet" href="CSS/AGS.css">
 		<style>
+			table, th, td {
+				border: 1px solid black;
+			}
+			table {
+				width: 100%;
+			}
 
-		.metrics-container{
-			background-color: rgb(100, 100, 100);
-			height: 200px;
-			;
-		}
-		div1{
-			border: 5px Solid;
-			height: 200px;
-
-		}
-
+			th, td {
+				height: 50px;
+				text-align: center;
+			}
+			body, head{
+				background-color: #CEF6CE;
+			}
 		</style>
 	</head>
 
@@ -32,9 +34,9 @@
 		<div class="container">
 			<header class="row">
 				<div class="col-xs-10">
-                <img src="Images/turbine.jpeg" alt="" height = 90>
+                <img src="Images/Turbine.jpeg" height = 90></img>
 				</div>
-				<button class="col-xs-2 btn btn-sm">Log in <span class="glyphicon glyphicon-log-in"></span></button>
+				<button class="col-xs-1 btn btn-sm">Log in <span class="glyphicon glyphicon-log-in"></span></button>
 			</header>
 
 			<nav class="row">
@@ -55,40 +57,46 @@
 			</nav>
 
 			<main class= "row">
+			<h1>Service Level Agreement Clients </h1>
+				<div class="table">
+					<table id="dataInsert">
+						<tr>
+							<th>Client ID</th>
+							<th>Site Name</th>
+							<th>Location</th>
+							<th>Turbine ID</th>
+							<th>Sensor Number </th>
+							<th>Service Manager</th>
+							<th>Section for SM Notes</th>
+							<th>Status</th>
+						  </tr>
+						  <tr>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+						  </tr>
+						  <tr>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+						  </tr>
+					</table>
+					<p> We plan on our table being conneted to the database and responsive to our follow up html pages</p>
+				</div>
+			</main>
 
-<div class="metrics-container">
-    <div1 class="col-xs-3">
-      <Strong>KPI Metric 1
-    </div1>
-    <div1 class="col-xs-3">
-      KPI Metric 2
-    </div1>
-    <div1 class="col-xs-3">
-      KPI Metric 3
-    </div1>
-		<div1 class="col-xs-3">
-      KPI Metric 4</Strong>
-    </div1>
-  </div>
-</div>
-<hr>
-<h3> Plots of Time Series Data </h3>
-<div>
-	<img src="Images/Timeseries.png" class="img-responsive col-xs-6" alt="Sample Timeseries">
-			</main>
-	<img src="Images/Timeseries.png" class="img-responsive col-xs-6" alt="Sample Timeseries">
-</div>
-<br>
-<br>
-<hr>
-<h3> More Plots of Time Series Data </h3>
-<div>
-	<img src="Images/Timeseries.png" class="img-responsive col-xs-6" alt="Sample Timeseries">
-			</main>
-	<img src="Images/Timeseries.png" class="img-responsive col-xs-6" alt="Sample Timeseries">
-</div>
 			<footer></footer>
-
+		</div>
 	</body>
 
 
