--- a/page2.html
+++ b/page2.html
@@ -13,18 +13,9 @@
 
 		<link rel="stylesheet" href="CSS/AGS.css">
 		<style>
-
-		.metrics-container{
-			background-color: rgb(100, 100, 100);
-			height: 200px;
-			;
-		}
-		div1{
-			border: 5px Solid;
-			height: 200px;
-
-		}
-
+			body, head{
+				background-color: #CEF6CE;
+			}
 		</style>
 	</head>
 
@@ -34,7 +25,7 @@
 				<div class="col-xs-10">
                 <img src="Images/turbine.jpeg" alt="" height = 90>
 				</div>
-				<button class="col-xs-2 btn btn-sm">Log in <span class="glyphicon glyphicon-log-in"></span></button>
+				<button class="col-xs-1 btn btn-sm">Log in <span class="glyphicon glyphicon-log-in"></span></button>
 			</header>
 
 			<nav class="row">
@@ -55,40 +46,25 @@
 			</nav>
 
 			<main class= "row">
-
-<div class="metrics-container">
-    <div1 class="col-xs-3">
-      <Strong>KPI Metric 1
-    </div1>
-    <div1 class="col-xs-3">
-      KPI Metric 2
-    </div1>
-    <div1 class="col-xs-3">
-      KPI Metric 3
-    </div1>
-		<div1 class="col-xs-3">
-      KPI Metric 4</Strong>
-    </div1>
-  </div>
-</div>
-<hr>
-<h3> Plots of Time Series Data </h3>
-<div>
-	<img src="Images/Timeseries.png" class="img-responsive col-xs-6" alt="Sample Timeseries">
+			<h1>Turbine Information</h1>
+				<p> We plan on having a page that willhave each turbine laid out with an indication of its status (good, sersors triggered, outage). The SM will be able to hover over each turbine and click for further details</p>
+				<div class="row">
+					<div id ="eachTurbine" class="col-sm-3";"><img src="Images/turbine.jpeg" alt="Windmill" width="80" height="80"> </div>
+					<div id ="eachTurbine" class="col-sm-3";"><img src="Images/turbine.jpeg" alt="Windmill" width="80" height="80"></div>
+					<div id ="eachTurbine" class="col-sm-3";"><img src="Images/turbine.jpeg" alt="Windmill" width="80" height="80"></div>
+					<div id ="eachTurbine" class="col-sm-3";"><img src="Images/turbine.jpeg" alt="Windmill" width="80" height="80"></div>
+				</div>
+				<br>
+				<div class="row">
+					<div id ="eachTurbine" class="col-sm-3";"><img src="Images/turbine.jpeg" alt="Windmill" width="80" height="80"> </div>
+					<div id ="eachTurbine" class="col-sm-3";"><img src="Images/turbine.jpeg" alt="Windmill" width="80" height="80"></div>
+					<div id ="eachTurbine" class="col-sm-3";"><img src="Images/turbine.jpeg" alt="Windmill" width="80" height="80"></div>
+					<div id ="eachTurbine" class="col-sm-3";"><img src="Images/turbine.jpeg" alt="Windmill" width="80" height="80"></div>
+				</div>
 			</main>
-	<img src="Images/Timeseries.png" class="img-responsive col-xs-6" alt="Sample Timeseries">
-</div>
-<br>
-<br>
-<hr>
-<h3> More Plots of Time Series Data </h3>
-<div>
-	<img src="Images/Timeseries.png" class="img-responsive col-xs-6" alt="Sample Timeseries">
-			</main>
-	<img src="Images/Timeseries.png" class="img-responsive col-xs-6" alt="Sample Timeseries">
-</div>
+			
 			<footer></footer>
-
+		</div>
 	</body>
 
 
