Some html changes

--- a/public/TurbineDetail.html
+++ b/public/TurbineDetail.html
@@ -1,8 +1,7 @@
-<<<<<<< HEAD
 <!DOCTYPE html>
 <html>
 	<head>
-		<title></title>
+		<title>Title</title>
 		<!-- Latest compiled and minified CSS -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
@@ -190,4 +189,3 @@
 
 
 </html>
->>>>>>> ca2ef79ff88977dbc13b62756a60cd3fe0545387
