--- a/public/serviceNotes.html
+++ b/public/serviceNotes.html
@@ -32,7 +32,7 @@
       <h3> Enter Service Record Here</h3>
       <form id="newNoteForm" @submit.prevent="  ">
         <div class="newNoteForm">
-          <label= for="note" type="text" v-model="" class="form-control" required>
+          <label for="note" type="text" v-model="" class="form-control" required></label>
         </div>
 
         <div class="submitNote">
