--- a/public/chart.html
+++ b/public/chart.html
@@ -14,12 +14,12 @@
   </head>
   <div class="container-fluid" background="Images/turbines.gif">
     <body>
-      <h1 class="a">Project Dashboard</h1>
-      <div style="text-align: center">
-        <p1>On this page, you will find all relevant information for the Turbines. Please refer to the navigation pane for further information.</p1>
+      <div style="text-align: center" class="top_label">
+        <h1 class="a">Project Dashboard</h1>
+          <p1>On this page, you will find all relevant information for the Turbines. Please refer to the navigation pane for further information.</p1>
       </div>
       <div style="text-align: center">
-        
+
       </div>
       <!-- Optional JavaScript -->
       <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
