--- a/public/chart.html
+++ b/public/chart.html
@@ -10,11 +10,11 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
 
-    <title>Hello, world!</title>
+    <title>Project Dashboard</title>
   </head>
   <div class="container-fluid" background="Images/turbines.gif">
     <body>
-      <div style="text-align: center" class="top_label">
+      <div style="text-align: center" class="top_label" align="right">
         <h1 class="a">Project Dashboard</h1>
           <p1>On this page, you will find all relevant information for the Turbines. Please refer to the navigation pane for further information.</p1>
       </div>
