--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
 		<div class="container">
 			<header class="row">
 				<div class="col-xs-10">
-                <img src="Images/Turbine.jpeg" height = 90></img>
+                <img src="Images/Turbine.jpeg" height = "90">
 				</div>
 				<button class="col-xs-1 btn btn-sm">Log in <span class="glyphicon glyphicon-log-in"></span></button>
 			</header>
