--- a/public/chart.html
+++ b/public/chart.html
@@ -12,17 +12,26 @@
 
     <title>Project Dashboard</title>
   </head>
-  <div class="container-fluid" background="Images/turbines.gif">
     <body>
+      <nav class="navbar navbar-custom navbar-expand-md">
+        <div class="container-fluid test">
+          <div class="navbar-header">
+            <a class="navbar-brand">Navigation Bar</a>
+          </div>
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="#"></a></li>
+            <li class="nav-item"><a href="index.html"> Main Page </a></li>
+            <li class="nav-item"><a href="personal_info.html"> Personal Information </a></li>
+            <li class="nav-item"><a href="table.html"> Table of Information </a></li>
+            <li class="nav-item"><a href="comments.html"> Comment Table </a></li>
+          </ul>
+        </div>
+      </nav>
       <div style="text-align: center" class="top_label" align="right">
         <h1 class="a">Project Dashboard</h1>
           <p1>On this page, you will find all relevant information for the Turbines. Please refer to the navigation pane for further information.</p1>
       </div>
-      <div style="text-align: center">
-
-      </div>
       <!-- Optional JavaScript -->
       <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     </body>
-  </div>
 </html>
