--- a/public/serviceNotes.html
+++ b/public/serviceNotes.html
@@ -16,7 +16,7 @@
           <th>Comment ID</th>
           <th>Client</th>
           <th>Notes</th>
-          
+
         </tr>
           <tbody id="notesTableBody" v-for="c in clientService"
           :id="c.commentId"
@@ -56,7 +56,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
 <!-- development version, includes helpful console warnings -->
 <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-<script src="JS/clientService.app.js"></script>
+<script src="js/clientService.app.js"></script>
   </body>
 
   </html>
