--- a/public/serviceNotes.html
+++ b/public/serviceNotes.html
@@ -23,7 +23,7 @@
           :key="c.commentId">
           <tr>
             <td>{{c.commentId}}</td>
-            <td>{{c.client}}</td>
+            <td>{{c.clientName}}</td>
             <td>{{c.notes}}</td>
           </tr>
           </tbody>
