--- a/public/serviceNotes.html
+++ b/public/serviceNotes.html
@@ -34,7 +34,7 @@
                         <div class="form-group row">
                           <label for="clientService" class="col-sm-1 col-form-label">Client: </label>
                           <div class="col-sm-3">
-                            <input type="text" id="client" v-model="commentForm.client" class="form-control" required>
+                            <input type="text" id="client" v-model="commentForm.clientName" class="form-control" required>
                           </div>
                         </div>
                         <div class="form-group row">
