--- a/public/index.html
+++ b/public/index.html
@@ -1,103 +1,37 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>Title</title>
-		<!-- Latest compiled and minified CSS -->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+<!doctype html>
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-        <!-- jQuery CDN -->
-        <script src="https://code.jquery.com/jquery-3.2.1.js"></script>
-
-        <!-- Latest compiled and minified JavaScript -->
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-
-		<link rel="stylesheet" href="CSS/AGS.css">
-		<style>
-			table, th, td {
-				border: 1px solid black;
-			}
-			table {
-				width: 100%;
-			}
-
-			th, td {
-				height: 50px;
-				text-align: center;
-			}
-			body, head{
-				background-color: #CEF6CE;
-			}
-		</style>
-	</head>
-
-	<body>
-		<div class="container">
-			<header class="row">
-				<div class="col-xs-10">
-                <img src="Images/Turbine.jpeg" height = "90">
-				</div>
-				<button class="col-xs-1 btn btn-sm">Log in <span class="glyphicon glyphicon-log-in"></span></button>
-			</header>
-
-			<nav class="row">
-            <ul class="nav navbar-nav">
-                <li><a href="">Home</a></li>
-                <li><a href="">About Us</a></li>
-                <li><a href="">Turbines</a></li>
-                <li class="dropdown">
-                    <a class="dropdown-toggle" href="" data-toggle="dropdown">Contact       <span class="caret">         </span>
-                    </a>
-                    <ul class="dropdown-menu">
-                        <li><a href="">Email</a></li>
-                        <li><a href="">Phone List</a></li>
-                        <li><a href="">Live Chat</a></li>
-                    </ul>
-                </li>
-            </ul>
-			</nav>
-
-			<main class= "row">
-			<h1>Service Level Agreement Clients </h1>
-				<div class="table">
-					<table id="dataInsert">
-						<tr>
-							<th>Client ID</th>
-							<th>Site Name</th>
-							<th>Location</th>
-							<th>Turbine ID</th>
-							<th>Sensor Number </th>
-							<th>Service Manager</th>
-							<th>Section for SM Notes</th>
-							<th>Status</th>
-						  </tr>
-						  <tr>
-							<td></td>
-							<td></td>
-							<td></td>
-							<td></td>
-							<td></td>
-							<td></td>
-							<td></td>
-							<td></td>
-						  </tr>
-						  <tr>
-							<td></td>
-							<td></td>
-							<td></td>
-							<td></td>
-							<td></td>
-							<td></td>
-							<td></td>
-							<td></td>
-						  </tr>
-					</table>
-					<p> We plan on our table being conneted to the database and responsive to our follow up html pages</p>
-				</div>
-			</main>
-
-			<footer></footer>
-		</div>
-	</body>
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="CSS/chart.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
 
+    <title>Project Dashboard</title>
+  </head>
+    <body>
+      <nav class="navbar navbar-custom navbar-expand-md">
+        <div class="container-fluid test">
+          <div class="navbar-header">
+            <a class="navbar-brand">Navigation Bar</a>
+          </div>
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="#"></a></li>
+            <li class="nav-item"><a href="index.html"> Main Page </a></li>
+            <li class="nav-item"><a href="personal_info.html"> Personal Information </a></li>
+            <li class="nav-item"><a href="table.html"> Table of Information </a></li>
+            <li class="nav-item"><a href="comments.html"> Comment Table </a></li>
+          </ul>
+        </div>
+      </nav>
+      <div style="text-align: center" class="top_label" align="right">
+        <h1 class="a">Project Dashboard</h1>
+          <p1>On this page, you will find all relevant information for the Turbines. Please refer to the navigation pane for further information.</p1>
+      </div>
+      <!-- Optional JavaScript -->
+      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    </body>
 </html>
