--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,11 @@
     <title>Project Dashboard</title>
   </head>
     <body>
+			<header class="row">
+            <div class="col-xs-10">
+          <img src="https://www.ags.org.uk/content/uploads/2018/01/AGS_logo_short.png" alt="Myself" height = "90">
+        </div>
+        </header>
       <nav class="navbar navbar-custom navbar-expand-md">
         <div class="container-fluid test">
           <div class="navbar-header">
@@ -27,11 +32,16 @@
           </ul>
         </div>
       </nav>
-      <div style="text-align: center" class="top_label" align="right">
-        <h1 class="a">Project Dashboard</h1>
-          <p1>On this page, you will find all relevant information for the Turbines. Please refer to the navigation pane for further information.</p1>
-      </div>
+			<main>
+
+
+
+		</main>
       <!-- Optional JavaScript -->
       <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+
+			<footer>
+      Kelley School of Business - MSIS Program, 2018
+    </footer>
     </body>
 </html>
