Commit to service notes style

--- a/public/serviceNotes.html
+++ b/public/serviceNotes.html
@@ -5,11 +5,31 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="CSS/chart.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <title>Service Record Notes</title>
   </head>
 
   <body>
+    <header class="row">
+          <div class="col-xs-10">
+        <img src="https://www.ags.org.uk/content/uploads/2018/01/AGS_logo_short.png" alt="Myself" height = "90">
+      </div>
+      </header>
+    <nav class="navbar navbar-custom navbar-expand-md">
+      <div class="container-fluid test">
+        <div class="navbar-header">
+          <a class="navbar-brand">Navigation Bar</a>
+        </div>
+        <ul class="nav navbar-nav">
+          <li class="active"><a href="#"></a></li>
+          <li class="nav-item"><a href="index.html"> Main Page </a></li>
+          <li class="nav-item"><a href="personal_info.html"> Personal Information </a></li>
+          <li class="nav-item"><a href="table.html"> Table of Information </a></li>
+          <li class="nav-item"><a href="comments.html"> Comment Table </a></li>
+        </ul>
+      </div>
+    </nav>
     <main id="clientServiceVue" class="container-fluid">
       <table id="notesTable" class="table table-striped table-sm">
         <tr>
@@ -57,6 +77,9 @@
 <!-- development version, includes helpful console warnings -->
 <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <script src="js/clientService.app.js"></script>
+<footer>
+Kelley School of Business - MSIS Program, 2018
+</footer>
   </body>
 
   </html>
