--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    
+
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -27,9 +27,9 @@
           <ul class="nav navbar-nav">
             <li class="active"><a href="#"></a></li>
             <li class="nav-item"><a href="index.html"> Main Page </a></li>
-            <li class="nav-item"><a href="personal_info.html"> Personal Information </a></li>
-            <li class="nav-item"><a href="table.html"> Table of Information </a></li>
-            <li class="nav-item"><a href="comments.html"> Comment Table </a></li>
+            <li class="nav-item"><a href="aboutUs.html"> About Us </a></li>
+            <li class="nav-item"><a href="table.html">  </a></li>
+            <li class="nav-item"><a href="sites.html"> Sites </a></li>
           </ul>
         </div>
       </nav>
