--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,15 @@
             <li class="active"><a href="#"></a></li>
             <li class="nav-item"><a href="index.html"> Main Page </a></li>
             <li class="nav-item"><a href="aboutUs.html"> About Us </a></li>
-            <li class="nav-item"><a href="table.html">  </a></li>
+            <li class="dropdown">
+                    <a class="dropdown-toggle" href="" data-toggle="dropdown">Contact       <span class="caret">         </span>
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a href="">Email</a></li>
+                        <li><a href="">Phone List</a></li>
+                        <li><a href="">Live Chat</a></li>
+                    </ul>
+                </li>
             <li class="nav-item"><a href="sites.html"> Sites </a></li>
           </ul>
         </div>
