Try again with task table

--- a/public/serviceNotes.html
+++ b/public/serviceNotes.html
@@ -77,9 +77,9 @@
 <!-- development version, includes helpful console warnings -->
 <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <script src="js/clientService.app.js"></script>
-<footer>
-Kelley School of Business - MSIS Program, 2018
-</footer>
+<script src="js/tablesort.min.js"></script>
+<script>new Tablesort(document.getElementById('notesTable'));</script>
+<footer>Kelley School of Business - MSIS Program, 2018</footer>
   </body>
 
   </html>
