--- a/public/index.html
+++ b/public/index.html
@@ -19,12 +19,16 @@
           <img src="https://www.ags.org.uk/content/uploads/2018/01/AGS_logo_short.png" alt="Myself" height = "90">
         </div>
         </header>
-        <nav class="row">
-            <ul class="nav navbar-nav">
-                <li><a href="#">Home</a></li>
-                <li><a href="">About</a></li>
-                <li><a href="">Sites</a></li>
-                <li class="dropdown">
+      <nav class="navbar navbar-custom navbar-expand-md">
+        <div class="container-fluid test">
+          <div class="navbar-header">
+            <a class="navbar-brand">Navigation Bar</a>
+          </div>
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="#"></a></li>
+            <li class="nav-item"><a href="index.html"> Main Page </a></li>
+            <li class="nav-item"><a href="aboutUs.html"> About Us </a></li>
+            <li class="dropdown">
                     <a class="dropdown-toggle" href="" data-toggle="dropdown">Contact       <span class="caret">         </span>
                     </a>
                     <ul class="dropdown-menu">
@@ -33,9 +37,10 @@
                         <li><a href="">Live Chat</a></li>
                     </ul>
                 </li>
-            </ul>
-
-        </nav>
+            <li class="nav-item"><a href="sites.html"> Sites </a></li>
+          </ul>
+        </div>
+      </nav>
 			<main>
 
 
