--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
             <li class="active"><a href="#"></a></li>
             <li class="nav-item"><a href="index.html"> Main Page </a></li>
             <li class="nav-item"><a href="aboutUs.html"> About Us </a></li>
-            <li class="dropdown">
+            <li class="dropdown nav-item">
                     <a class="dropdown-toggle" href="" data-toggle="dropdown">Contact       <span class="caret">         </span>
                     </a>
                     <ul class="dropdown-menu">
