--- a/public/index.html
+++ b/public/index.html
@@ -41,11 +41,45 @@
           </ul>
         </div>
       </nav>
-			<main>
+      <main id="clientServiceVue" class="container-fluid">
+        <table id="notesTable" class="table table-striped table-sm">
+          <tr>
+            <th>Comment ID</th>
+            <th>Client</th>
+            <th>Notes</th>
 
+          </tr>
+            <tbody id="notesTableBody" v-for="c in clientService"
+            :id="c.commentId"
+            :key="c.commentId">
+            <tr>
+              <td>{{c.commentId}}</td>
+              <td>{{c.clientName}}</td>
+              <td>{{c.notes}}</td>
+            </tr>
+            </tbody>
+        </table>
 
+        <h3> Enter Service Record Here</h3>
+        <form id="newCommentForm"  @submit.prevent="handleCommentForm">
+                          <div class="form-group row">
+                            <label for="clientService" class="col-sm-1 col-form-label">Client: </label>
+                            <div class="col-sm-3">
+                              <input type="text" id="client" v-model="commentForm.clientName" class="form-control" required>
+                            </div>
+                          </div>
+                          <div class="form-group row">
+                            <label for="clientService" class="col-sm-1 col-form-label">Notes: </label>
+                            <div class="col-sm-3">
+                              <input type="text" id="notes" v-model="commentForm.notes" class="form-control" required>
+                            </div>
 
-		</main>
+                          </div>
+
+                          <!-- <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button> -->
+                          <button id="submitNewComment" type="submit" class="btn btn-primary" onclick="window.location.reload()">Save changes</button>
+                        </form>
+      </main>
       <!-- Optional JavaScript -->
       <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 
