--- a/public/kpi.html
+++ b/public/kpi.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
+
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -13,6 +14,11 @@
     <title>Project Dashboard</title>
   </head>
     <body>
+			<header class="row">
+            <div class="col-xs-10">
+          <img src="https://www.ags.org.uk/content/uploads/2018/01/AGS_logo_short.png" alt="Myself" height = "90">
+        </div>
+        </header>
       <nav class="navbar navbar-custom navbar-expand-md">
         <div class="container-fluid test">
           <div class="navbar-header">
@@ -21,17 +27,30 @@
           <ul class="nav navbar-nav">
             <li class="active"><a href="#"></a></li>
             <li class="nav-item"><a href="index.html"> Main Page </a></li>
-            <li class="nav-item"><a href="personal_info.html"> Personal Information </a></li>
-            <li class="nav-item"><a href="table.html"> Table of Information </a></li>
-            <li class="nav-item"><a href="comments.html"> Comment Table </a></li>
+            <li class="nav-item"><a href="aboutUs.html"> About Us </a></li>
+            <li class="dropdown nav-item">
+                    <a class="dropdown-toggle" href="" data-toggle="dropdown">Contact       <span class="caret">         </span>
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a href="">Email</a></li>
+                        <li><a href="">Phone List</a></li>
+                        <li><a href="">Live Chat</a></li>
+                    </ul>
+                </li>
+            <li class="nav-item"><a href="sites.html"> Sites </a></li>
           </ul>
         </div>
       </nav>
-      <div style="text-align: center" class="top_label" align="right">
-        <h1 class="a">Project Dashboard</h1>
-          <p1>On this page, you will find all relevant information for the Turbines. Please refer to the navigation pane for further information.</p1>
-      </div>
+			<main>
+
+
+
+		</main>
       <!-- Optional JavaScript -->
       <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+
+			<footer>
+      Kelley School of Business - MSIS Program, 2018
+    </footer>
     </body>
 </html>
