--- a/public/index.html
+++ b/public/index.html
@@ -80,9 +80,14 @@
                           <button id="submitNewComment" type="submit" class="btn btn-primary" onclick="window.location.reload()">Save changes</button>
                         </form>
       </main>
+      <!-- moment.js via CDN-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
+
+    <!-- development version, includes helpful console warnings -->
+    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
       <!-- Optional JavaScript -->
       <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-
+      <script src="js/clientService.app.js"></script>
 			<footer>
       Kelley School of Business - MSIS Program, 2018
     </footer>
