--- a/public/index.html
+++ b/public/index.html
@@ -44,9 +44,11 @@
       <main id="clientServiceVue" class="container-fluid">
         <table id="notesTable" class="table table-striped table-sm">
           <tr>
-            <th>Comment ID</th>
-            <th>Client</th>
-            <th>Notes</th>
+            <thead>
+            <th role="columnheader">Comment ID</th>
+            <th role="columnheader">Client</th>
+            <th role="columnheader">Notes</th>
+          </thead>
 
           </tr>
             <tbody id="notesTableBody" v-for="c in clientService"
