--- a/public/index.html
+++ b/public/index.html
@@ -42,6 +42,7 @@
         </div>
       </nav>
       <main id="clientServiceVue" class="container-fluid">
+
         <table id="notesTable" class="table table-striped table-sm">
           <tr>
             <thead>
@@ -51,15 +52,15 @@
           </thead>
 
           </tr>
-            <tbody id="notesTableBody" v-for="c in clientService"
-            :id="c.commentId"
-            :key="c.commentId">
-            <tr>
-              <td>{{c.commentId}}</td>
-              <td>{{c.clientName}}</td>
-              <td>{{c.notes}}</td>
-            </tr>
-            </tbody>
+          <tbody id="notesTableBody" v-for="c in clientService"
+          :id="c.commentId"
+          :key="c.commentId">
+          <tr>
+            <td>{{c.commentId}}</td>
+            <td>{{c.clientName}}</td>
+            <td>{{c.notes}}</td>
+          </tr>
+          </tbody>
         </table>
 
         <h3> Enter Service Record Here</h3>
@@ -90,6 +91,8 @@
       <!-- Optional JavaScript -->
       <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
       <script src="js/clientService.app.js"></script>
+      <script src="js/tablesort.min.js"></script>
+      <script> new Tablesort(document.getElementById('notesTable'));</script>
 			<footer>
       Kelley School of Business - MSIS Program, 2018
     </footer>
