--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,36 @@
           </ul>
         </div>
       </nav>
-      <main id="clientServiceVue" class="container-fluid">
+      <main  class="container-fluid">
+<div id="clientVue">
+        <table id="notesTable1" class="table table-striped table-sm">
+          <tr>
+            <thead>
+            <th role="columnheader">Client ID</th>
+            <th role="columnheader">Client</th>
+            <th role="columnheader">Description</th>
+            <th role="columnheader">Sector</th>
+            <th role="columnheader">Sub Industry</th>
+            <th role="columnheader">Headquarters</th>
+          </thead>
+
+          </tr>
+          <tbody id="notesTableBody1" v-for="c in client"
+          :id="c.clienttId"
+          :key="c.clientId">
+          <tr>
+            <td>{{c.clientId}}</td>
+            <td>{{c.clientName}}</td>
+            <td>{{c.clientDescription}}</td>
+            <td>{{c.gicsSector}}</td>
+            <td>{{c.gicsSubIndustry}}</td>
+            <td>{{c.headquarters}}</td>
+          </tr>
+          </tbody>
+        </table>
+      </div>
+<div id="clientServiceVue">
+
 
         <table id="notesTable" class="table table-striped table-sm">
           <tr>
@@ -82,6 +111,7 @@
                           <!-- <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button> -->
                           <button id="submitNewComment" type="submit" class="btn btn-primary" onclick="window.location.reload()">Save changes</button>
                         </form>
+                        </div>
       </main>
       <!-- moment.js via CDN-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
@@ -91,6 +121,7 @@
       <!-- Optional JavaScript -->
       <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
       <script src="js/clientService.app.js"></script>
+      <script src="js/client.app.js"></script>
       <script src="js/tablesort.min.js"></script>
       <script> new Tablesort(document.getElementById('notesTable'));</script>
 			<footer>
