--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
             <li class="nav-item"><a href="index.html"> Main Page </a></li>
             <li class="nav-item"><a href="aboutUs.html"> About Us </a></li>
             <li class="dropdown nav-item">
-                    <a class="dropdown-toggle" href="" data-toggle="dropdown">Contact       <span class="caret">         </span>
+                    <a class="dropdown-toggle" href="contact.html" data-toggle="dropdown">Contact       <span class="caret">         </span>
                     </a>
                     <ul class="dropdown-menu">
                         <li><a href="">Email</a></li>
