--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,7 @@
       </nav>
       <main  class="container-fluid">
 <div id="clientVue">
-        <table id="notesTable1" class="table table-striped table-sm">
+        <table id="notesTable1" class="col-12 table table-striped table-sm">
           <tr>
             <thead>
             <th role="columnheader">Client ID</th>
@@ -72,7 +72,7 @@
 <div id="clientServiceVue">
 
 
-        <table id="notesTable" class="table table-striped table-sm">
+        <table id="notesTable" class="col-12 table table-striped table-sm">
           <tr>
             <thead>
             <th role="columnheader">Comment ID</th>
