--- a/public/sites.html
+++ b/public/sites.html
@@ -47,7 +47,7 @@
 
 
 <div id="siteVue">
-        <table id="notesTable1" class="col-12 table table-striped table-sm">
+        <table id="notesTable2" class="col-12 table table-striped table-sm">
           <tr>
             <thead>
             <th role="columnheader">Site ID</th>
@@ -82,7 +82,7 @@
             <td>{{c.addrCity}}</td>
             <td>{{c.addrState}}</td>
             <td>{{c.addrZip}}</td>
-            <td>{{addrCountry}}</td>
+            <td>{{c.addrCountry}}</td>
           </tr>
           </tbody>
         </table>
