--- a/public/contact.html
+++ b/public/contact.html
@@ -42,7 +42,13 @@
         </div>
       </nav>
       <main  class="container-fluid">
-
+        <div class="container-fluid">
+          <div class="row">
+                    <div class="col">Contact Service Tech</div>
+                    <div class="col">Email Us</div>
+                    <div class="col">Report Turbine Outage</div>
+          </div>
+        </div>
       </main>
       <!-- moment.js via CDN-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
