--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
             <li class="nav-item"><a href="index.html"> Main Page </a></li>
             <li class="nav-item"><a href="aboutUs.html"> About Us </a></li>
             <li class="dropdown nav-item">
-                    <a class="dropdown-toggle" href="contact.html" data-toggle="dropdown">Contact       <span class="caret">         </span>
+                    <a class="dropdown-toggle" href="" data-toggle="dropdown">Contact       <span class="caret">         </span>
                     </a>
                     <ul class="dropdown-menu">
                         <li><a href="">Email</a></li>
@@ -41,38 +41,9 @@
           </ul>
         </div>
       </nav>
-      <main  class="container-fluid">
-<div id="clientVue">
-        <table id="notesTable1" class="col-12 table table-striped table-sm">
-          <tr>
-            <thead>
-            <th role="columnheader">Client ID</th>
-            <th role="columnheader">Client</th>
-            <th role="columnheader">Description</th>
-            <th role="columnheader">Sector</th>
-            <th role="columnheader">Sub Industry</th>
-            <th role="columnheader">Headquarters</th>
-          </thead>
-
-          </tr>
-          <tbody id="notesTableBody1" v-for="c in client"
-          :id="c.clienttId"
-          :key="c.clientId">
-          <tr>
-            <td>{{c.clientId}}</td>
-            <td>{{c.clientName}}</td>
-            <td>{{c.clientDescription}}</td>
-            <td>{{c.gicsSector}}</td>
-            <td>{{c.gicsSubIndustry}}</td>
-            <td>{{c.headquarters}}</td>
-          </tr>
-          </tbody>
-        </table>
-      </div>
-<div id="clientServiceVue">
-
-
-        <table id="notesTable" class="col-12 table table-striped table-sm">
+      <main id="clientServiceVue" class="container-fluid">
+        
+        <table id="notesTable" class="table table-striped table-sm">
           <tr>
             <thead>
             <th role="columnheader">Comment ID</th>
@@ -92,16 +63,16 @@
           </tbody>
         </table>
 
-        <h3 style="color: white"> Enter Service Record Here</h3>
+        <h3> Enter Service Record Here</h3>
         <form id="newCommentForm"  @submit.prevent="handleCommentForm">
                           <div class="form-group row">
-                            <label style="color: white" for="clientService" class="col-sm-1 col-form-label">Client: </label>
+                            <label for="clientService" class="col-sm-1 col-form-label">Client: </label>
                             <div class="col-sm-3">
                               <input type="text" id="client" v-model="commentForm.clientName" class="form-control" required>
                             </div>
                           </div>
                           <div class="form-group row">
-                            <label style="color: white" for="clientService" class="col-sm-1 col-form-label">Notes: </label>
+                            <label for="clientService" class="col-sm-1 col-form-label">Notes: </label>
                             <div class="col-sm-3">
                               <input type="text" id="notes" v-model="commentForm.notes" class="form-control" required>
                             </div>
@@ -111,7 +82,6 @@
                           <!-- <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button> -->
                           <button id="submitNewComment" type="submit" class="btn btn-primary" onclick="window.location.reload()">Save changes</button>
                         </form>
-                        </div>
       </main>
       <!-- moment.js via CDN-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
@@ -121,7 +91,6 @@
       <!-- Optional JavaScript -->
       <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
       <script src="js/clientService.app.js"></script>
-      <script src="js/client.app.js"></script>
       <script src="js/tablesort.min.js"></script>
       <script> new Tablesort(document.getElementById('notesTable'));</script>
 			<footer>
