--- a/public/turbinesDeployed.html
+++ b/public/turbinesDeployed.html
@@ -68,7 +68,7 @@
           <tr>
             <td>{{c.turbineDeployedId}}</td>
             <td>{{c.turbineId}}</td>
-            <td>{{c.sitetId}}</td>
+            <td>{{c.siteId}}</td>
             <td>{{c.serialNumber}}</td>
             <td>{{c.deployedDate}}</td>
             <td>{{c.totalFiredHours}}</td>
