put back key and id

--- a/public/turbinesDeployed.html
+++ b/public/turbinesDeployed.html
@@ -61,7 +61,9 @@
           </thead>
 
           </tr>
-          <tbody id="notesTableBody2" v-for="c in turbines">
+          <tbody id="notesTableBody2" v-for="c in turbines"
+          :id="c.turbineDeployedId"
+          :key="c.turbineDeployedId">
           <tr>
             <td>{{c.turbineDeployedId}}</td>
             <td>{{c.turbineId}}</td>
