Added Turbines Deployed to header temp

--- a/public/turbinesDeployed.html
+++ b/public/turbinesDeployed.html
@@ -43,7 +43,7 @@
       </nav>
       <main  class="container-fluid">
       <br>
-      <h1 style="color: white">Site Information</h1>
+      <h1 style="color: white">Turbine Information</h1>
 
 <div id="turbinesVue">
         <table id="notesTable2" class="col-12 table table-striped table-sm">
