--- a/public/turbinesDeployed.html
+++ b/public/turbinesDeployed.html
@@ -51,7 +51,7 @@
             <thead>
             <th role="columnheader">Turbine Deployed ID</th>
             <th role="columnheader">Turbine ID</th>
-            <th role="columnheader">Site</th>
+            <th role="columnheader">Site ID</th>
             <th role="columnheader">Serial Number</th>
             <th role="columnheader">Deployed Date</th>
             <th role="columnheader">Total Fired Hours</th>
