--- a/public/index.html
+++ b/public/index.html
@@ -58,9 +58,7 @@
                     </thead>
 
                   </tr>
-                  <tbody id="notesTableBody2" v-for="c in client"
-                  :key="c.clientId"
-                  :id="c.clientId">
+                  <tbody id="notesTableBody2" v-for="c in client">
                   <tr>
                     <td>{{c.clientId}}</td>
                     <td>{{c.clientName}}</td>
