--- a/public/index.html
+++ b/public/index.html
@@ -42,10 +42,10 @@
           </ul>
         </div>
       </nav>
-      <main id="clientServiceVue" class="container-fluid">
+      <main id="clientVue" class="container-fluid">
 
 
-        <div id="clientVue">
+        <div>
                 <table id="notesTable2" class="col-12 table table-striped table-sm">
                   <tr>
                     <thead>
