Changing notes page pt2

--- a/public/clientNotes.html
+++ b/public/clientNotes.html
@@ -43,7 +43,7 @@
       </ul>
     </div>
   </nav>
-  <main class="container-fluid">
+  <main id="clientServiceVue" class="container-fluid">
     <br>
     <h1 style="color: white">Turbine Information</h1>
 
