testing out form

--- a/public/index.html
+++ b/public/index.html
@@ -62,6 +62,11 @@
                   </tbody>
                 </table>
               </div>
+            <div id="Buttons">
+              <form action="http://google.com">
+    <input type="submit" value="Go to Google" />
+</form>
+            </div>
 
 
       </main>
