--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
 
 
         <div>
-                <table id="notesTable2" class="col-12 table table-striped table-sm">
+                <table style="padding-top 30px" id="notesTable2" class="col-12 table table-striped table-sm">
                   <tr>
                     <thead>
                     <th role="columnheader">Client ID</th>
