trying buttons again

--- a/public/index.html
+++ b/public/index.html
@@ -70,6 +70,7 @@
               <form action="graph.html?turbineDeployedId=2">
                 <input type="submit" value="Turbine 2 KPIs" />
               </form>
+              <a href="graph.html?turbineDeployedId=2" class="button">Go to Google</a>
             </div>
 
 
