padding and button shape

--- a/public/index.html
+++ b/public/index.html
@@ -64,13 +64,9 @@
               </div>
 
             <div id="buttons">
-              <form action="graph.html?turbineDeployedId=1">
-                <input type="submit" value="Turbine 1 KPIs" />
-              </form>
-              <form action="graph.html?turbineDeployedId=2">
-                <input type="submit" value="Turbine 2 KPIs" />
-              </form>
-              <a href="graph.html?turbineDeployedId=2" class="button">Go to Google</a>
+
+              <a href="graph.html?turbineDeployedId=1" class="button">Turbine 1 KPIs</a>
+              <a href="graph.html?turbineDeployedId=2" class="button">Turbine 2 KPIs</a>
             </div>
 
 
