Updating CSS and link

--- a/public/graph.html
+++ b/public/graph.html
@@ -9,6 +9,11 @@
 		<title> KPI Information </title>
 	</head>
 	<body class="first">
+    <header class="row">
+          <div class="col-xs-10">
+        <img src="https://www.ags.org.uk/content/uploads/2018/01/AGS_logo_short.png" alt="Myself" height = "90">
+      </div>
+      </header>
     <nav class="navbar navbar-custom navbar-expand-md">
       <div class="container-fluid test">
         <div class="navbar-header">
@@ -27,9 +32,6 @@
 		<div class="container">
 
 			<main>
-				<div class="row">
-	          <img src="img/turbines.jpg" alt="turbine image" width="1500px">
-	      </div>
 				<br />
 				<h1>Key Performance Indicators</h1>
 				<br />
