change css link

--- a/public/graph.html
+++ b/public/graph.html
@@ -31,7 +31,7 @@
     </nav>
 		<div class="container">
 
-			<main>
+			<main class="graph">
 				<br />
 				<h1>Key Performance Indicators</h1>
 				<br />
