side by side trial

--- a/public/graph.html
+++ b/public/graph.html
@@ -35,7 +35,7 @@
 				<br />
 
 					<!-- <div class="col placeholder"> -->
-					<div  id="kpiMain">
+					<div style="float: left" id="kpiMain">
 						<h4>Output</h4>
 						<div id="outputChart" class="col">
 						</div>
