--- a/public/graph.html
+++ b/public/graph.html
@@ -47,7 +47,7 @@
 						</div>
 					</div>
 
-					<div  id="kpiCompressor">
+					<div style="float: left" id="kpiCompressor">
 						<h4>Compressor Efficiency</h4>
 						<div id="compressorChart" class="col">
 						</div>
