updated email linlk

--- a/public/contact.html
+++ b/public/contact.html
@@ -45,7 +45,8 @@
 
           <div class="row" id="contactInfo">
                     <div class="col">123-456-7891</div>
-                    <div class="col">example@example.com</div>
+                    <div class="col">
+                      <a href="mailto:example@example.com?Subject=AGS%20Inquiry" target="_top">example@example.com</a></div>
                     <div class="col">Turbine Down Site</div>
           </div>
         </div>
