--- a/public/graph.html
+++ b/public/graph.html
@@ -29,60 +29,60 @@
 				</ul>
       </div>
     </nav>
-		<div class="container">
-				<br />
-				<h1>Key Performance Indicators</h1>
-				<br />
+		<div class="container-fluid">
+					<br />
+					<h1>Key Performance Indicators</h1>
+					<br />
+			<div class="row">
+						<!-- <div class="col placeholder"> -->
+						<div id="kpiMain" class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
+							<h4>Output</h4>
+							<div id="outputChart">
+							</div>
+						</div>
 
-					<!-- <div class="col placeholder"> -->
-					<div id="kpiMain" class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
-						<h4>Output</h4>
-						<div id="outputChart">
+						<div  id="kpiHeat" class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
+							<h4>Heat Rate</h4>
+							<div id="heatChart">
+							</div>
 						</div>
-					</div>
 
-					<div  id="kpiHeat" class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
-						<h4>Heat Rate</h4>
-						<div id="heatChart">
+						<div id="kpiCompressor" class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
+							<h4>Compressor Efficiency</h4>
+							<div id="compressorChart">
+							</div>
 						</div>
-					</div>
 
-					<div id="kpiCompressor" class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
-						<h4>Compressor Efficiency</h4>
-						<div id="compressorChart">
+						<div  id="kpiAvailability" class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
+							<h4>Availability</h4>
+							<div id="availabilityChart">
+							</div>
 						</div>
-					</div>
 
-					<div  id="kpiAvailability" class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
-						<h4>Availability</h4>
-						<div id="availabilityChart">
+						<div  id="kpiReliability" class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
+							<h4>Reliability</h4>
+							<div id="reliabilityChart">
+							</div>
 						</div>
-						</div>
-					</div>
 
-					<div  id="kpiReliability" class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
-						<h4>Reliability</h4>
-						<div id="reliabilityChart">
+						<div  id="kpiHours" class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
+							<h4>Fired Hours</h4>
+							<div id="hoursChart">
+							</div>
 						</div>
-					</div>
 
-					<div  id="kpiHours" class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
-						<h4>Fired Hours</h4>
-						<div id="hoursChart">
+						<div  id="kpiTrips" class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
+							<h4>Trips</h4>
+							<div id="tripsChart">
+							</div>
 						</div>
-					</div>
 
-					<div  id="kpiTrips" class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
-						<h4>Trips</h4>
-						<div id="tripsChart">
+						<div  id="kpiStarts" class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
+							<h4>Starts</h4>
+							<div id="startsChart">
+							</div>
 						</div>
-					</div>
-
-					<div  id="kpiStarts" class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
-						<h4>Starts</h4>
-						<div id="startsChart">
-						</div>
-					</div>
+			</div>
 	</div>
 
 	<!-- higcharts -->
