Fixed unaligned table

--- a/public/aboutUs.html
+++ b/public/aboutUs.html
@@ -14,12 +14,12 @@
     <title>Project Dashboard</title>
   </head>
     <body>
-			<header class="row">
+			<header class="col">
             <div class="col-xs-10">
           <img src="https://www.ags.org.uk/content/uploads/2018/01/AGS_logo_short.png" alt="Myself" height = "90">
         </div>
         </header>
-      <nav class="navbar navbar-custom navbar-expand-md">
+      <nav class="navbar navbar-custom navbar-expand-m">
         <div class="container-fluid test">
           <div class="navbar-header">
             <a class="navbar-brand">Navigation Bar</a>
