--- a/public/sites.html
+++ b/public/sites.html
@@ -62,7 +62,7 @@
           :key="c.siteId"
           :id="'site- ' + c.siteId"
           @click="goToSite(c.siteId)">
-          <tr>
+          <tr style="cursor: pointer">
             <td>{{c.siteName}}</td>
             <td>{{c.siteDescription}}</td>
             <td>{{c.primaryContact}}</td>
