fixing html errors, navbar errors

--- a/public/graph.html
+++ b/public/graph.html
@@ -9,7 +9,7 @@
 		<title> KPI Information </title>
 	</head>
 	<body class="first">
-    <header class="row">
+    <header class="col">
           <div class="col-xs-10">
         <img src="https://www.ags.org.uk/content/uploads/2018/01/AGS_logo_short.png" alt="Myself" height = "90">
       </div>
