--- a/public/metrics.html
+++ b/public/metrics.html
@@ -13,7 +13,7 @@
     <title>Project Dashboard</title>
   </head>
     <body>
-			<header class="row">
+			<header class="col">
             <div class="col-xs-10">
           <img src="https://www.ags.org.uk/content/uploads/2018/01/AGS_logo_short.png" alt="Myself" height = "90">
         </div>
