--- a/public/graph.html
+++ b/public/graph.html
@@ -72,8 +72,6 @@
 							<div id="hoursChart">
 							</div>
 						</div>
-
-
 			</div>
 	</div>
 
@@ -83,7 +81,7 @@
 	<script src="https://code.highcharts.com/modules/exporting.js"></script>
 	<script src="https://code.highcharts.com/modules/export-data.js"></script>
 
-	<div id="container" style="min-width: 700px; height: 600px; margin: 0 auto"></div>
+	<!--<div id="container" style="min-width: 700px; height: 600px; margin: 0 auto"></div>
 
 	<!-- development version, includes helpful console warnings -->
 	<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
