--- a/public/clientNotes.html
+++ b/public/clientNotes.html
@@ -86,7 +86,7 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
   <script src="js/clientService.app.js"></script>
   <footer>
-    Kelley School of Business - MSIS Program, 2018
+    The Kelley School of Business - MSIS Program, 2018
   </footer>
 </body>
 
