--- a/public/aboutUs.html
+++ b/public/aboutUs.html
@@ -61,5 +61,5 @@ With these words he sat, and Calchas son of Thestor, wisest of augurs, who knew 
       </p>
       </main>
       </body>
-      <footer>Kelley School of Business - MSIS Program, 2018</footer>
+      <footer>The Kelley School of Business - MSIS Program, 2018</footer>
       </html>
