yay almost done

--- a/public/contact.html
+++ b/public/contact.html
@@ -62,7 +62,7 @@
       <script src="js/clientService.app.js"></script>
       <script src="js/client.app.js"></script>
 			<footer>
-      Kelley School of Business - MSIS Program, 2018
+      The Kelley School of Business - MSIS Program, 2018
     </footer>
     </body>
 </html>
