--- a/public/graph.html
+++ b/public/graph.html
@@ -95,7 +95,7 @@
 	<script src="js/kpiTrips.app.js"></script>
 	<script src="js/kpiStarts.app.js"></script>
   <footer>
-  Kelley School of Business - MSIS Program, 2018
+  The Kelley School of Business - MSIS Program, 2018
 </footer>
 </body>
 </html>
