--- a/public/sites.html
+++ b/public/sites.html
@@ -92,7 +92,7 @@
     <script src="js/sites.app.js"></script>
     <script src="js/turbines.app.js"></script>
 			<footer>
-      Kelley School of Business - MSIS Program, 2018
+      The Kelley School of Business - MSIS Program, 2018
     </footer>
     </body>
 </html>
