--- a/public/sites.html
+++ b/public/sites.html
@@ -39,6 +39,8 @@
       <br>
       <h1 style="color: white">Site Information</h1>
 
+      <h6  style="color: white">Click on a site to see information about the turbines for that location</h6>
+
 
 <div id="siteVue">
         <table id="notesTable2" class="col-12 table table-striped table-sm">
