--- a/public/clientNotes.html
+++ b/public/clientNotes.html
@@ -39,7 +39,7 @@
   </nav>
   <main id="clientServiceVue" class="container-fluid">
     <br>
-    <h1 style="color: white">Turbine Information</h1>
+    <h1 style="color: white">Client Service Notes</h1>
 
     <table id="notesTable" class="table table-striped table-sm">
       <tr>
