Making some updates

--- a/public/index.html
+++ b/public/index.html
@@ -60,6 +60,7 @@
         </div>
 
             <div id="buttons">
+              <h6 style="color:  white">Click a button to see the KPIs for that turbine!</h6>
               <a href="graph.html?turbineDeployedId=1" class="button">Turbine 1 KPIs</a>
               <a href="graph.html?turbineDeployedId=2" class="button">Turbine 2 KPIs</a>
             </div>
