--- a/public/sensorTimeSeries.html
+++ b/public/sensorTimeSeries.html
@@ -39,7 +39,7 @@
   </nav>
   <main class="container-fluid">
     <br>
-    <h1 style="color: white">Site Information</h1>
+    <h1 style="color: white">Sensor Data</h1>
 
 
     <div id="sensorVue">
